<?xml version="1.0"?>
<package>
  <name>cortex_bridge</name>
  <version>0.0.0</version>
  <description>Connects to cortex motion capture system and publishes tf::StampedTransforms of a specific body defined in cortex. Publishes all markers, identified and unidentified, in a visualization_msgs::Markers and in cortex_bridge::Markers. Has service exposed to recalibrate the origin of a specfic body.</description>

  <maintainer email="tcsorey@gmail.com">Tyler Sorey</maintainer>

  <license>GNU General Public License, Version 3.0</license>

  <url type="website">https://github.com/unr-arl/cortex_ros_bridge</url>

  <author email="tcsorey@gmail.com">Tyler Sorey</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>

</package>
